[tool.poetry]
name = "sushi-pipeline"
version = "0.1.0"
description = ""
authors = ["mildsalmon <mildsalmon@gmail.com>"]
readme = "README.md"
packages = [{include = "sushi_pipeline"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
pylint = "^2.17.5"
black = {extras = ["d"], version = "^23.7.0"}
pre-commit = "^3.3.3"
apache-airflow = "^2.6.3"
apache-airflow-providers-amazon = "^8.5.0"
boto3 = "^1.28.25"
pandas = "^1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
